--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<head><script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js"></script>
-</head>
+
 <link rel="stylesheet" href="style.css">
 <script src="scripts.js"></script>
 <div class="resume-wrapper">
@@ -9,36 +8,8 @@
 			<div class="picture-resume-wrapper">
         <div class="picture-resume">
         <span><img src="photo.jpg" alt="" /></span>
-        <svg version="1.1" viewBox="0 0 350 350">
-
-			<defs>
-			    <filter id="goo">
-				    <feGaussianBlur in="SourceGraphic" stdDeviation="8" result="blur" />
-				    <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 21 -9" result="cm" />
-			    </filter>
-			</defs>
-
-
-			<g filter="url(#goo)" >
-
-			  <circle id="main_circle" class="st0" cx="171.5" cy="175.6" r="130"/>
-
-			  <circle id="circle" class="bubble0 st1" cx="171.5" cy="175.6" r="122.7"/>
-			  <circle id="circle" class="bubble1 st1" cx="171.5" cy="175.6" r="122.7"/>
-			  <circle id="circle" class="bubble2 st1" cx="171.5" cy="175.6" r="122.7"/>
-			  <circle id="circle" class="bubble3 st1" cx="171.5" cy="175.6" r="122.7"/>
-			  <circle id="circle" class="bubble4 st1" cx="171.5" cy="175.6" r="122.7"/>
-			  <circle id="circle" class="bubble5 st1" cx="171.5" cy="175.6" r="122.7"/>
-			  <circle id="circle" class="bubble6 st1" cx="171.5" cy="175.6" r="122.7"/>
-			  <circle id="circle" class="bubble7 st1" cx="171.5" cy="175.6" r="122.7"/>
-			  <circle id="circle" class="bubble8 st1" cx="171.5" cy="175.6" r="122.7"/>
-			  <circle id="circle" class="bubble9 st1" cx="171.5" cy="175.6" r="122.7"/>
-			  <circle id="circle" class="bubble10 st1" cx="171.5" cy="175.6" r="122.7"/>
-
-			</g>
-		</svg>
       </div>
-         <div class="clearfix"></div>
+
  </div>
       <div class="name-wrapper">
         <h1>Владимир <br/>Журавлев</h1>
@@ -54,12 +25,12 @@
       	</ul>
         <ul class="list-content ">
         	<!-- <li>ask for it</li> <!-- YOUR PHONE NUMBER  -->
-        	<li>zhuravlev at moloko.plus</li> <!-- YOUR EMAIL -->
-        	<li><a href="#">zhura.lol</a></li> <!-- YOUR WEBSITE  -->
-        	<li>Azərbaycan, Bakı</li> <!-- YOUR STATE AND COUNTRY  -->
+        	<li>zhuravlev at moloko.plus</li>
+        	<li><a class="black" href="#">zhura.lol</a></li>
+        	<li>Azərbaycan, Bakı</li>
         </ul>
       </div>
-      <div class="contact-presentation"> <!-- YOUR PRESENTATION RESUME  -->
+      <div class="contact-presentation">
       	<p><span class="bold">Jack of all trades</span></p>
       	<p>По ремеслу айтишник (3 года опыта в L2 Tech Support), разрабатываю бота для moloko.plus. Занимался уличным активизмом. Сейчас книгоиздатель, пишу статьи про игры и не только, веду телеграм-канал про всё это</p>
       </div>
@@ -72,11 +43,11 @@
 			<li>альманах</li>
       	</ul>
         <ul class="list-content">
-      		<li><a href="https://twitter.com/zhuralol">@zhuralol</a></li>
-      		<li><a href="https://t.me/zhuralol">@zhuralol</a></li>
-      		<li><a href="https://t.me/ru_sjw">Русский SJW</a></li>
-			<li><a href="https://t.me/directio_libera">directio libera</a></li>
-			<li><a href="https://moloko.plus">moloko plus</a></li>
+      		<li><a class="black" href="https://twitter.com/zhuralol">@zhuralol</a></li>
+      		<li><a class="black" href="https://t.me/zhuralol">@zhuralol</a></li>
+      		<li><a class="black" href="https://t.me/ru_sjw">Русский SJW</a></li>
+			<li><a class="black" href="https://t.me/directio_libera">directio libera</a></li>
+			<li><a class="black" href="https://moloko.plus">moloko plus</a></li>
       	</ul>
       </div>
 		</div>
@@ -109,16 +80,16 @@
       	</div>
 
          <div class="job-wrapper clearfix">
-        	<div class="experience-title">Сооснователь, редактор, веду проекты</div> <!-- JOB TITLE  -->
+        	<div class="experience-title">Сооснователь, редактор, веду проекты</div>
           <div class="company-description">
-          	<p>Издатель книги Алексея Жабина <a href="https://moloko.plus/books/tproduct/565075711-861611652981-konets-svobodnoi-epohi-litsa-bolotnoi">«Конец свободной эпохи. Лица Болотной»</a> о людях, которых навсегда изменили события 6 мая 2012 года на Болотной площади: патриоты, оппозиционеры, журналисты. </p>  <!-- JOB DESCRIPTION  -->
-          	<p>Издатель книги Алексея Жабина «Конец свободной эпохи. Лица Болотной»</p>  <!-- JOB DESCRIPTION  -->
+          	<p>Издатель книги Алексея Жабина <a href="https://moloko.plus/books/tproduct/565075711-861611652981-konets-svobodnoi-epohi-litsa-bolotnoi">«Конец свободной эпохи. Лица Болотной»</a> о людях, которых навсегда изменили события 6 мая 2012 года на Болотной площади: патриоты, оппозиционеры, журналисты. </p>
+          	<p>Издатель книги <a href="https://t.me/alnapisal">Алексея Жабина</a> «Конец свободной эпохи. Лица Болотной»</p>
           </div>
         </div>
 
         <div class="company-wrapper clearfix">
-      		<div class="experience-title">Издательский кооператив <a href="https://napilnik.store">«Напильник»</a></div> <!-- NAME OF THE COMPANY YOUWORK WITH  -->
-          <div class="time">2020 - 29 сентября 2021 года</div> <!-- THE TIME YOU WORK WITH THE COMPANY  -->
+      		<div class="experience-title">Издательский кооператив <a href="https://napilnik.store">«Напильник»</a></div>
+          <div class="time">2020 - 29 сентября 2021 года</div>
       	</div>
 
          <div class="job-wrapper clearfix">
@@ -132,7 +103,7 @@
       </div>
 
       <div class="section-wrapper clearfix">
-      	<h3 class="section-title">Skills</h3>  <!-- YOUR SET OF SKILLS  -->
+      	<h3 class="section-title">Skills</h3>
         	<ul>
         		<li class="skill-percentage">Python</li>
         		<li class="skill-percentage">GNU/Linux</li>
@@ -148,7 +119,7 @@
       </div>
 
       <div class="section-wrapper clearfix">
-        <h3 class="section-title">Хобби</h3>  <!-- DESCRIPTION OF YOUR HOBBIES -->
+        <h3 class="section-title">Хобби</h3>
         <p>Пыть пыво, играть в глобальные стратегии, пересылать мемы друзьям</p>
 
         <p>Делать небольшие сайд-проекты на питоне</p>
