funny stuff and text fixes

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="job-wrapper clearfix">
         	<div class="experience-title">Разработчик, иногда соавтор текстов</div> <!-- JOB TITLE  -->
           <div class="company-description">
-          	<p>В одиночку разрабатываю телеграм-бота на Python для интеграции заказов из тильды, публичного API Почты России и принтера для этикеток. Сэкономил сотни человеко-часов. Стек: Python, AIOgram, pochta.ru, dadata</p>
+          	<p>В одиночку разрабатываю телеграм-бота на Python для интеграции заказов из тильды, публичного API Почты России и принтера для этикеток. Сэкономил сотни человеко-часов. Public repo tba</p>
           	<p>Стек: Python, AIOgram, pochta.ru, dadata</p>
           	<p><a href="https://moloko.plus/almanac">«Государство»</a>: соавтор «Правил жизни Мао Цзедуна» и <a href="https://vatnikstan.ru/history/tanki-v-stolicze/">титанического текста про события 1993 года</a></p>
 			<p><a href="https://moloko.plus/podcast">Подкаст «Руки за голову»</a>: project manager</p>
@@ -82,8 +82,7 @@
          <div class="job-wrapper clearfix">
         	<div class="experience-title">Сооснователь, редактор, веду проекты</div>
           <div class="company-description">
-          	<p>Издатель книги Алексея Жабина <a href="https://moloko.plus/books/tproduct/565075711-861611652981-konets-svobodnoi-epohi-litsa-bolotnoi">«Конец свободной эпохи. Лица Болотной»</a> о людях, которых навсегда изменили события 6 мая 2012 года на Болотной площади: патриоты, оппозиционеры, журналисты. </p>
-          	<p>Издатель книги <a href="https://t.me/alnapisal">Алексея Жабина</a> «Конец свободной эпохи. Лица Болотной»</p>
+          	<p>Издатель книги <a href="https://t.me/alnapisal">Алексея Жабина</a> <a href="https://moloko.plus/books/tproduct/565075711-861611652981-konets-svobodnoi-epohi-litsa-bolotnoi">«Конец свободной эпохи. Лица Болотной»</a> о людях, которых навсегда изменили события 6 мая 2012 года на Болотной площади: патриоты, оппозиционеры, журналисты. </p>
           </div>
         </div>
 
