--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
         	<!-- <li>ask for it</li> <!-- YOUR PHONE NUMBER  -->
         	<li>zhuravlev at moloko.plus</li>
         	<li><a class="black" href="#">zhura.lol</a></li>
-        	<li>Azərbaycan, Bakı</li>
+        	<li>Serbia, Belgrade</li>
         </ul>
       </div>
       <div class="contact-presentation">
       	<p><span class="bold">Jack of all trades</span></p>
-      	<p>По ремеслу айтишник (3 года опыта в L2 Tech Support), разрабатываю бота для moloko.plus. Занимался уличным активизмом. Сейчас книгоиздатель, пишу статьи про игры и не только, веду телеграм-канал про всё это</p>
+      	<p>По ремеслу айтишник (>3 лет опыта в L2 Tech Support), разрабатываю бота для moloko.plus. Занимался уличным активизмом. Сейчас книгоиздатель, пишу статьи про игры и не только, веду телеграм-канал про всё это</p>
       </div>
       <div class="contact-social clearfix">
       	<ul class="list-titles">
