--- a/lenin.html
+++ b/lenin.html
@@ -114,7 +114,7 @@
 
   <h2>Случайный Ленин</h2>
 
-  <img src="https://i.imgur.com/FCnrXXF.jpeg" alt="Lenin" class="lenin-img">
+  <img src="https://i.imgur.com/UOFKHdn.jpeg" alt="Lenin" class="lenin-img">
 
   <div class="quote-popup" id="quotePopup">
     «Хранить наследство — вовсе не значит ещё ограничиваться этим наследством» В.И. Ленин
