--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+<html>
+<head>
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
+</head>
+
 
 <link rel="stylesheet" href="style.css">
 <script src="scripts.js"></script>
@@ -130,3 +138,4 @@
 
   <div class="clearfix"></div>
 </div>
+</html>
