added Indie Auth

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       		<!-- <li>Телефон</li> -->
       		<li>Почта</li>
       		<li>Сайт</li>
-      		<li>Место</li>
+      		<li>Локация</li>
       	</ul>
         <ul class="list-content ">
         	<!-- <li>ask for it</li> <!-- YOUR PHONE NUMBER  -->
@@ -51,10 +51,10 @@
 			<li>альманах</li>
       	</ul>
         <ul class="list-content">
-      		<li><a class="black" href="https://twitter.com/zhuralol">@zhuralol</a></li>
-      		<li><a class="black" href="https://t.me/zhuralol">@zhuralol</a></li>
-      		<li><a class="black" href="https://t.me/ru_sjw">Русский SJW</a></li>
-			<li><a class="black" href="https://t.me/directio_libera">directio libera</a></li>
+      		<li><a class="black" href="https://twitter.com/zhuralol" rel="me">@zhuralol</a></li>
+      		<li><a class="black" href="https://t.me/zhuralol" rel="me">@zhuralol</a></li>
+      		<li><a class="black" href="https://t.me/ru_sjw" rel="me">Русский SJW</a></li>
+			<li><a class="black" href="https://t.me/directio_libera" >directio libera</a></li>
 			<li><a class="black" href="https://moloko.plus">moloko plus</a></li>
       	</ul>
       </div>
