added Github to Indie Auth

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       <div class="contact-social clearfix">
       	<ul class="list-titles">
       		<li>Twitter</li>
+      		<li>GitHub</li>
       		<li>Telegram</li>
       		<li>мой канал</li>
 			<li>издательство</li>
@@ -52,6 +53,7 @@
       	</ul>
         <ul class="list-content">
       		<li><a class="black" href="https://twitter.com/zhuralol" rel="me">@zhuralol</a></li>
+      		<li><a class="black" href="https://github.com/zhuralol" rel="me">zhuralol</a></li>
       		<li><a class="black" href="https://t.me/zhuralol" rel="me">@zhuralol</a></li>
       		<li><a class="black" href="https://t.me/ru_sjw" rel="me">Русский SJW</a></li>
 			<li><a class="black" href="https://t.me/directio_libera" >directio libera</a></li>
